syntax = "proto3";
import "google/protobuf/empty.proto";

option java_package = "com.projectmedicine.auth.UserComponent.protoComponents";

message UserBodyProto {
  int32 user_id = 1;
  string email = 2;
  string hashed_password = 3;
  RoleEnumProto role_enum = 4;
  repeated TokenProto tokens = 8;

}
message TokenProto {
  int32 id = 1;
  string token = 2;
  TokenTypeProto token_type = 3;
  bool revoked = 4;
  bool expired = 5;
}
enum TokenTypeProto {
  BEARER = 0;
}
enum RoleEnumProto {
  ADMIN = 0;
  PATIENT = 1;
  DOCTOR = 2;
}

service UserService {
  rpc getUserById(GetUserByIdRequestProto) returns (UserResponseProto);
  rpc getUserByEmail(GetUserByEmailRequestProto) returns (UserResponseProto);
  rpc deleteUser(DeleteUserRequestProto) returns (DeleteUserResponseProto);
}

message GetUserByIdRequestProto {
  int32 user_id = 1;
}
message GetUserByEmailRequestProto {
  string email = 1;
}

message UserResponseProto{
  oneof response {
    UserBodyProto userResponse = 1;
    ErrorResponseProto error_response = 2;
  }
}

message DeleteUserRequestProto {
  int32 user_id = 1;
}

message DeleteUserSuccessResponseProto {
  bool successDeleted = 1;
}
message DeleteUserResponseProto {
  oneof response {
    DeleteUserSuccessResponseProto successDeleted = 1;
    ErrorResponseProto error_response = 2;
  }
}

message ErrorResponseProto {
  int32 error_code = 1;
  string error_message = 2;
}